kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus
  template:
    metadata:
      name: otus
      labels:
        app: otus
    spec:
      containers:
        - image: mksikayo/otus-hw-2-health-check
          name: healthcheck
