kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus
spec:
  type: NodePort
  selector:
    app: otus
  ports:
    - port: 8000
      targetPort: 8000
